--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.11.7",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -32,7 +33,6 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-appwrite": "^0.9.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.0",
