--- a/package.json
+++ b/package.json
@@ -36,14 +36,21 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "stream-chat-expo": "^7.0.0",
+    "tailwindcss": "^3.4.17",
+    "@react-native-community/netinfo": "11.4.1",
+    "expo-image-manipulator": "~13.1.7",
+    "react-native-svg": "15.11.2",
+    "expo-sharing": "~13.1.5",
+    "expo-clipboard": "~7.1.4",
+    "expo-media-library": "~17.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
